build_errors.txt
warning: unused manifest key: package.keyword
   Compiling compiler v0.1.0 (C:\Users\alexy\compiler)
error: expected `,`, found keyword `self`
   --> src\ai.rs:122:17
    |
121 |                 "     requesting fix from {}..."
    |                                                 - expected `,`
122 |                 self.config.provider.dimmed()
    |                 ^^^^ unexpected token

error: expected one of `(`, `,`, `::`, or `=`, found `.`
  --> src\config.rs:52:28
   |
52 | #[derive(Debug, Deserialize. Clone)]
   |                            ^ expected one of `(`, `,`, `::`, or `=`

error: cannot find attribute `serde` in this scope
  --> src\config.rs:56:7
   |
56 |     #[serde(default = "default_cmake")]
   |       ^^^^^
   |
   = note: `serde` is an attribute that can be used by the derive macros `Deserialize` and `Serialize`, you might be missing a `derive` attribute
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find attribute `serde` in this scope
  --> src\config.rs:54:7
   |
54 |     #[serde(default = "default_clang")]
   |       ^^^^^
   |
   = note: `serde` is an attribute that can be used by the derive macros `Deserialize` and `Serialize`, you might be missing a `derive` attribute
   = note: `serde` is in scope, but it is a crate, not an attribute

error[E0412]: cannot find type `LintDiagnostics` in this scope
  --> src\ai.rs:57:48
   |
57 |         let mut grouped: HashMap<PathBuf, Vec<&LintDiagnostics>> = HashMap::new();
   |                                                ^^^^^^^^^^^^^^^
   |
  ::: src\types.rs:5:1
   |
 5 | pub struct LintDiagnostic {
   | ------------------------- similarly named struct `LintDiagnostic` defined here
   |
help: a struct with a similar name exists
   |
57 -         let mut grouped: HashMap<PathBuf, Vec<&LintDiagnostics>> = HashMap::new();
57 +         let mut grouped: HashMap<PathBuf, Vec<&LintDiagnostic>> = HashMap::new();
   |
help: you might be missing a type parameter
   |
15 | impl<LintDiagnostics> AiFixer {
   |     +++++++++++++++++

error[E0425]: cannot find value `diags` in this scope
  --> src\ai.rs:99:17
   |
99 |                 diags.len(),
   |                 ^^^^^ help: a local variable with a similar name exists: `diag`

error[E0425]: cannot find value `diags` in this scope
   --> src\ai.rs:100:20
    |
100 |                 if diags.len() == 1 { "" } else { "s" }
    |                    ^^^^^ help: a local variable with a similar name exists: `diag`

error[E0425]: cannot find value `diags` in this scope
   --> src\ai.rs:104:22
    |
104 |             for d in diags.iter() {
    |                      ^^^^^ help: a local variable with a similar name exists: `diag`

error[E0425]: cannot find value `reponse` in this scope
   --> src\ai.rs:136:24
    |
136 |                     if reponse.is_empty() || response.len() < min_len {
    |                        ^^^^^^^ help: a local variable with a similar name exists: `response`

error[E0412]: cannot find type `uize` in this scope
   --> src\ai.rs:246:17
    |
246 |     pub failed: uize,
    |                 ^^^^ help: a builtin type with a similar name exists: `usize`

error[E0425]: cannot find value `project_path` in this scope
   --> src\ai.rs:265:42
    |
265 |     let lang = detect_language_from_path(project_path);
    |                                          ^^^^^^^^^^^^ help: a local variable with a similar name exists: `project_paht`

error[E0425]: cannot find value `project_path` in this scope
   --> src\ai.rs:273:9
    |
273 |         project_path,
    |         ^^^^^^^^^^^^ help: a local variable with a similar name exists: `project_paht`

error[E0425]: cannot find value `project_path` in this scope
   --> src\ai.rs:288:9
    |
288 |         project_path,
    |         ^^^^^^^^^^^^ help: a local variable with a similar name exists: `project_paht`

error[E0425]: cannot find value `poc_dir` in this scope
   --> src\config.rs:182:23
    |
182 |     let config_path = poc_dir.join("config.toml");
    |                       ^^^^^^^ not found in this scope

error[E0425]: cannot find value `config` in this scope
   --> src\config.rs:186:13
    |
186 |             config.path.display()
    |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `c` in this scope
   --> src\config.rs:243:18
    |
243 |         Ok(t) => c,
    |                  ^ not found in this scope

error[E0412]: cannot find type `PocConfig` in module `crate::config`
   --> src\orchestrator.rs:553:29
    |
553 |     config: &crate::config::PocConfig,
    |                             ^^^^^^^^^ help: a struct with a similar name exists: `AiConfig`
    |
   ::: src\config.rs:104:1
    |
104 | pub struct AiConfig {
    | ------------------- similarly named struct `AiConfig` defined here

error[E0412]: cannot find type `LintDiagnostics` in this scope
  --> src\types.rs:28:21
   |
 5 | pub struct LintDiagnostic {
   | ------------------------- similarly named struct `LintDiagnostic` defined here
...
28 |     pub errors: Vec<LintDiagnostics>,
   |                     ^^^^^^^^^^^^^^^
   |
help: a struct with a similar name exists
   |
28 -     pub errors: Vec<LintDiagnostics>,
28 +     pub errors: Vec<LintDiagnostic>,
   |
help: you might be missing a type parameter
   |
25 | pub struct BuildResult<LintDiagnostics> {
   |                       +++++++++++++++++

error[E0412]: cannot find type `LintDiagnostics` in this scope
  --> src\types.rs:34:26
   |
 5 | pub struct LintDiagnostic {
   | ------------------------- similarly named struct `LintDiagnostic` defined here
...
34 |     pub diagnostics: Vec<LintDiagnostics>,
   |                          ^^^^^^^^^^^^^^^
   |
help: a struct with a similar name exists
   |
34 -     pub diagnostics: Vec<LintDiagnostics>,
34 +     pub diagnostics: Vec<LintDiagnostic>,
   |
help: you might be missing a type parameter
   |
32 | pub struct LintResult<LintDiagnostics> {
   |                      +++++++++++++++++

error[E0405]: cannot find trait `Plugins` in this scope
   --> src\walker.rs:120:24
    |
120 |     plugins: &[Box<dyn Plugins>],
    |                        ^^^^^^^ help: a trait with a similar name exists: `Plugin`
    |
   ::: src\types.rs:79:1
    |
 79 | pub trait Plugin: Send + Sync {
    | ----------------------------- similarly named trait `Plugin` defined here

error[E0405]: cannot find trait `Plugins` in this scope
   --> src\walker.rs:167:24
    |
167 |     plugins: &[Box<dyn Plugins>],
    |                        ^^^^^^^ help: a trait with a similar name exists: `Plugin`
    |
   ::: src\types.rs:79:1
    |
 79 | pub trait Plugin: Send + Sync {
    | ----------------------------- similarly named trait `Plugin` defined here

error[E0425]: cannot find function `all_plugins` in module `plugins`
  --> src\main.rs:67:28
   |
67 |     let plugins = plugins::all_plugins(&config);
   |                            ^^^^^^^^^^^ not found in `plugins`

error[E0425]: cannot find value `EXIT_NO_PROJECTS` in this scope
  --> src\main.rs:76:28
   |
18 | const EXIT_NO_PROJECT: i32 = 4;
   | ------------------------------- similarly named constant `EXIT_NO_PROJECT` defined here
...
76 |         std::process::exit(EXIT_NO_PROJECTS);
   |                            ^^^^^^^^^^^^^^^^ help: a constant with a similar name exists: `EXIT_NO_PROJECT`

error[E0422]: cannot find struct, variant or union type `LintsOpts` in this scope
   --> src\main.rs:138:33
    |
138 |                 let lint_opts = LintsOpts {
    |                                 ^^^^^^^^^ help: a struct with a similar name exists: `LintOpts`
    |
   ::: src\types.rs:74:1
    |
 74 | pub struct LintOpts {
    | ------------------- similarly named struct `LintOpts` defined here

error[E0425]: cannot find value `confog` in this scope
   --> src\main.rs:239:42
    |
239 |             let fixer = ai::AiFixer::new(confog.ai.clone())
    |                                          ^^^^^^ help: a local variable with a similar name exists: `config`

Some errors have detailed explanations: E0405, E0412, E0422, E0425.
For more information about an error, try `rustc --explain E0405`.
error: could not compile `compiler` (bin "compiler") due to 25 previous errors
